Source/src/eos_Interface.proto.h

  void FUNC_INTER eos_GetErrorMessage (EOS_INTEGER *errorCode,
                                       EOS_CHAR errorMsg[EOS_MaxErrMsgLen]);
  void FUNC_INTER eos_GetPackedTables (EOS_INTEGER *nTables,
                                       EOS_INTEGER tableHandles[],
                                       EOS_CHAR *packedTables,
                                       EOS_INTEGER *errorCode);
  void FUNC_INTER eos_ErrorCodesEqual (EOS_INTEGER *err1, EOS_INTEGER *err2, EOS_BOOLEAN *result);
  void FUNC_INTER eos_SetPackedTables (EOS_INTEGER *nTables,
                                       EOS_INTEGER *packedTablesSize,
                                       EOS_CHAR *packedTables,
                                       EOS_INTEGER tableHandles[],
                                       EOS_INTEGER *errorCode);
  void FUNC_INTER eos_GetMetaData (EOS_INTEGER *infoItem, EOS_INTEGER *infoItemCategory,
				   EOS_CHAR *infoStr, EOS_INTEGER *errorCode);
  void FUNC_INTER eos_GetTableMetaData (EOS_INTEGER *tableHandle, EOS_INTEGER *infoItem,
					EOS_CHAR *infoStr, EOS_INTEGER *errorCode);
  void FUNC_INTER eos_GetTableCmnts (EOS_INTEGER *tableHandle,
                                     EOS_CHAR *cmntStr,
                                     EOS_INTEGER *errorCode);
  void FUNC_INTER eos_GetVersionLength (EOS_INTEGER *length);
  void FUNC_INTER eos_GetVersion (EOS_CHAR *version);
  void FUNC_INTER eos_Time (EOS_BOOLEAN *reset, EOS_REAL *wctime,
                            EOS_REAL *cputime, EOS_REAL *cpucycles,
                            EOS_INTEGER *err);